--- a/assignment2/contact.html
+++ b/assignment2/contact.html
@@ -36,3 +36,46 @@
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </nav>
+
+      <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
+
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" Name="name" placeholder="Jane Doe" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect With Me</h2>
+
+          <img src="assets/images/github-128.png" class="social" alt="Github">
+          <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn">
+          <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow">
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      &copy;Copyright 2016 Sandra Leal
+    </div>
+  </footer>
+
+</body>
+</html>
